# MapManager

./: CMakeLists.txt  README.md  package.xml
App/: main.cpp
include/MapManager/: MapManager.h
maps/: RaceMap.pgm  RaceMap.yaml
rviz/: MapManager.rviz
src/MapManager/: MapManager.cpp
